[fix] remove ‘text-align: center’ in .form-area (mobile css)

--- a/app/assets/stylesheets/redesign/pages/_landing-styling-session.scss
+++ b/app/assets/stylesheets/redesign/pages/_landing-styling-session.scss
@@ -269,7 +269,6 @@
       }
 
       .form-area {
-        text-align: center;
 
         h3 {
           margin-top: 15px;
